Added main menu and created the activities needed

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,7 +10,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+		<activity android:name=".Configs"></activity>
+		<activity android:name=".Board"></activity>
+		<activity android:name=".About"></activity>
     </application>
 
 
