--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,8 @@
             </intent-filter>
         </activity>
 		<activity android:name=".ConfigsActivity"></activity>
-		<activity android:name=".BoardActivity"></activity>
+		<activity android:name=".BoardActivity" android:screenOrientation="portrait"
+		android:configChanges="orientation|keyboardHidden|keyboard"></activity>
 		<activity android:name=".AboutActivity"></activity>
     </application>
 
