Added the InstructionsActivity in the manifest. Included 6 pictures for the instructions. Changed the background and the color of some text in about.xml. Constructed instructions.xml. Added the sound checkbox in menu.xml. Changed some code in options_menu2.xml and in BoardActivity.java. Included the sound file wwwsoundbytercomelectroniccminorarpeggio.ogg. Constructed InstructionsActivity.java. Added the sound on/off controll functionality in SoundManager.java. Added the sound checkbox controll in Upwords.java.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
 		<activity android:name=".BoardActivity" android:screenOrientation="portrait"
 		android:configChanges="orientation|keyboardHidden|keyboard"></activity>
 		<activity android:name=".AboutActivity"></activity>
+		<activity android:name=".InstructionsActivity"></activity>
     </application>
 
 
